javac -proc:full (https://inside.java/2024/06/18/quality-heads-up/)